--- a/otel-collector.yaml
+++ b/otel-collector.yaml
@@ -6,6 +6,13 @@ receivers:
       http:
         endpoint: 0.0.0.0:4318
 
+  prometheus:
+    config:
+      scrape_configs:
+        - job_name: 'flask-app'
+          static_configs:
+            - targets: ['flask-app:5000']  # ou 8000 se estiver usando start_http_server
+
 exporters:
   otlp:
     endpoint: jaeger:4317
@@ -34,6 +41,6 @@ service:
       exporters: [otlp, debug]
 
     metrics:
-      receivers: [otlp]
+      receivers: [otlp, prometheus]
       processors: [batch]
       exporters: [prometheus]
